# ML-foundations-pytorch

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/yolov7/: data.yaml  data_splits.yaml  hyperparameters.yaml  params.yaml
ml_foundations_pytorch/data/: MNISTdataloader.py  MNISTdataset.py  augmentations.py  preprocessing.py
ml_foundations_pytorch/evaluate/: compare.py  metrics.py
ml_foundations_pytorch/utils/: file_utils.py  gpu_utils.py  wandb_utils.py
ml_foundations_pytorch/visualisation/: image.py  plots.py  video.py
models/MNIST/: hidden_layer.py
notebooks/: mnist_workbook.ipynb
workflow/: evaluate.py  main.py  package.py  preprocess.py  test.py  train.py
